# zingo-mobile

./: .detoxrc.js  .dockerignore  .eslintignore  .gitattributes  .gitignore  .prettierrc.js  App.tsx  Dockerfile  README.md  TROUBLESHOOTING.md  app.json  babel.config.js  index.js  jest.config.js  package.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.run/: Template Android App.run.xml
__mocks__/: createNativeStackNavigator.tsx  i18n-js.js  react-native-appearance.js  react-native-biometrics.js  react-native-fs.js  react-native-qrcode-scanner.js  react-native-qrcode-svg.js  react-native-reanimated.js  react-native-snackbar.js  react-native-svg-charts.js
__tests__/: About.snapshot.tsx  AddressBook.AbDetail.snapshot.tsx  AddressBook.snapshot.tsx  App.snapshot.tsx  Button.snapshot.tsx  ChainTypeToggle.snapshot.tsx  CircularProgress.snapshot.tsx  Components.snapshot.tsx  Components.unit.tsx  DetailLine.snapshot.tsx  Header.snapshot.tsx  History.Landscape.snapshot.tsx  History.Portrait.snapshot.tsx  History.TxDetail.unit.tsx  History.ValueTransferDetail.unit.tsx  History.snapshot.tsx  ImportKey.snapshot.tsx  ImportUfvk.snapshot.tsx  Info.es.unit.tsx  Info.snapshot.tsx  Info.us.unit.tsx  InfoModal.es.unit.tsx  InfoModal.snapshot.tsx  InfoModal.us.unit.tsx  Insight.snapshot.tsx  Legacy.Landscape.snapshot.tsx  Legacy.Portrait.snapshot.tsx  Legacy.snapshot.tsx  LoadedApp.snapshot.tsx  LoadingApp.snapshot.tsx  Memo.snapshot.tsx  Messages.snapshot.tsx  MessagesAddress.snapshot.tsx  Pools.snapshot.tsx  PriceFetcher.snapshot.tsx  PrivKey.snapshot.tsx  PrivKeyModal.snapshot.tsx  Receive.Lanscape.snapshot.tsx  Receive.Portrait.snapshot.tsx  Receive.snapshot.tsx  (+24 more)
android/: build.gradle  build.gradle.kts  gradle.properties  gradlew.bat  integration_tests.sh  integration_tests_arm.sh  settings.gradle
app/: AppState.ts  BackgroundSync.ts  LoadedApp.tsx  LoadingApp.tsx  WalletKeysSave.ts  createAlert.ts  recoveryWalletInfo.ts  rpc.ts  selectingServer.ts  sendEmail.ts  simpleBiometrics.ts  simplePasscode.ts  types.ts  uris.ts  utils.ts
components/: About.tsx  Button.tsx  CommonStyles.ts  Components.tsx  Header.tsx  ImportKey.tsx  InfoModal.tsx  PrivKeyModal.tsx  RPCModule.ts  ReceiveScreen.tsx  ReceiversScreen.tsx  RescanModal.tsx  SeedComponent.tsx  SendScreen.tsx  SettingsFileImpl.ts  SettingsModal.tsx  SyncReportModal.tsx  TransactionsScreen.tsx  ZingoHamburger.tsx  ZingoHeader.tsx  ZingoLogoImage.tsx  react-native-option-menu.d.ts  react-native-side-menu-updated.d.ts
docs/: privacy_policy.txt
e2e/: 02_preexisting.test.js  03_new_wallet.test.js  README.md  address_types.test.js  change_custom_regtest_server.test.js  change_custom_server.test.js  change_custom_testnet_server.test.js  change_server_from_list.test.js  darkside_background_sync_benchmark.test.js  darkside_background_sync_while_closed_benchmark.test.js  darkside_interrupt_server.test.js  darkside_interrupt_sync.test.js  darkside_simple_sync.test.js  history_components.test.js  jest.config.js  load.test.js  loadRecipientWallet.js  loadTestWallet.js  loadTestnetWallet.js  my.test.js  new_checkbox_send.test.js  new_wallet.test.js  parse_invalid_address.test.js  reload_while_tx_pending.test.js  reload_while_tx_unconfirmed.test.js  run.sh  runall.sh  screen_awake.test.js  send.test.js  send_tex_address.test.js  setup-jest.js  setup.sh  sync_report.test.js  testnet_wallet.test.js  tex_send_address.test.js  transaction_history.test.js
ios/: .xcode.env  .xcode.env.local  AppDelegate.swift  Constants.swift  Podfile  PrivacyInfo.xcprivacy  RPCModule-Bridging-Header.h  RPCModule.h  RPCModule.m  RPCModule.swift  RPCModuleBridge.m  RPCModuleSwift.swift  RPCModuleSwiftBridge.m  Tests.m  rust.h
patches/: @react-native-community+art+1.2.0.patch  @react-native-community+checkbox+0.5.17.patch  @react-native-community+clipboard+1.5.1.patch  react-native-biometrics+3.0.1.patch  react-native-camera+4.2.1.patch  react-native-fs+2.20.0.patch  react-native-qrcode-svg+6.3.12.patch  react-native-simple-biometrics+1.5.2.patch  react-native-snackbar+2.6.2.patch  react-native-snackbar+2.8.0.patch
rust/: .gitignore  Cargo.toml  Dockerfile  Dockerfile apple m1  build.sh  clean-docker-cmd.txt
rust/.config/: nextest.toml
rust/android/: Cargo.toml  Dockerfile  build.sh  buildemudocker.ps1  buildopenssl.sh  emubuild.sh  localbuild.sh
rust/android/builder/: Dockerfile  README.txt  builder.sh
rust/android/buildphases/: constructdockerimages.sh  exportbuiltartifacts.sh  runcargobuilds.sh
rust/android/docker/: Dockerfile
rust/android/rustNDKDocker/: dockerfile
rust/android/src/: lib.rs
rust/android/tests/: e2e_tests.rs  integration_tests.rs
rust/android/tests/data/wallets/interrupt_sync_test/: transaction_hex.txt
rust/buildphases/: constructdockerimages.sh  exportbuiltartifacts.sh
rust/ios/: Cargo.toml  build.sh  buildci.sh  buildsimulator.sh  rust.h
rust/ios/src/: lib.rs
rust/lib/: Cargo.toml  build.rs  uniffi-bindgen.rs
rust/lib/src/: lib.rs  rustlib.udl  zingo.udl
rust/regtest/: README.md
rust/regtest/conf/: zcash.conf
rust/regtest/data/lightwalletd/db/regtest/: blocks  lengths
rust/regtest/data/zcashd/regtest/blocks/index/: LOG
rust/regtest/data/zcashd/regtest/chainstate/: LOG
rust/test-utils/: Cargo.toml
rust/test-utils/src/: lib.rs
rust/test_utils/: Cargo.toml
rust/test_utils/src/: lib.rs
rust/zingomobile_utils/: Cargo.toml
rust/zingomobile_utils/src/: lib.rs
scripts/: build_apk.sh  build_final_apk.sh  e2e_tests.sh  e2e_tests_actions.sh  e2e_tests_old.sh  emulate_app.sh  emulator_boot.sh  emulator_create.sh  emulator_dependencies.sh  emulator_install_apk.sh  emulator_launch_app.sh  emulator_read_target.sh  emulator_run.sh  emulator_target.sh  flow_detox_run.sh  flow_detox_setup.sh  flow_emulate_interactive.sh  flow_emulator_run_apk.sh  flow_emulator_run_interactive.sh  flow_emulator_setup.sh  flow_emulator_test.sh  flow_test_e2e.sh  install_emulator_for_e2e.sh  install_emulators.sh  integration_tests.sh  integration_tests_actions.sh  kill_emulators.sh  (+11 more)
(+478 files in other folders)
