[workspace]
members = [
    "lib",
#    "android",
# we need this until we migrate to swift (uniffi-rs swift bindings)
    "ios",
    "zingomobile_utils"
]
resolver = "2"

[workspace.dependencies]
zingolib = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
zingoconfig = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
uniffi = { version = "0.27.0" }
rustlib = { path = "./lib" }

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false

# this is needed to build for IOS simulator
[patch.crates-io]
sodiumoxide = { git = "https://github.com/juanky201271/sodiumoxide", rev = "81a777464ee1553c47c61ee9e3a43fda7a3135f1"}
