[workspace]
members = [
    "lib",
    "android",
    "zingomobile_utils"
]
resolver = "2"

[workspace.dependencies]
zingolib = { git="https://github.com/fluidvanadium/zingolib", default-features=true, branch = "send_proposed_transactions" }
zingoconfig = { git="https://github.com/fluidvanadium/zingolib", default-features=true, branch = "send_proposed_transactions" }
uniffi = "0.27"

[profile.release]
debug = false

[profile.test]
opt-level = 3
debug = false

# this is needed to build for IOS simulator
[patch.crates-io]
sodiumoxide = { git = "https://github.com/juanky201271/sodiumoxide", rev = "81a777464ee1553c47c61ee9e3a43fda7a3135f1"}
