[package]
name = "rust"
version = "1.0.1"
authors = ["Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

[features]
ci = []
regchest = []

[dev-dependencies]
zingoconfig = { workspace = true }
zingomobile_utils = { path = "../zingomobile_utils" }
regchest_utils = { git="https://github.com/zingolabs/zingo-regchest", default-features=true, branch = "dev" }
zingo-testutils = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "mob-release-1.4.2" }
darkside-tests = { git="https://github.com/zingolabs/zingolib", default-features=true, tag = "mob-release-1.4.2" }
json = "0.12.4"
env_logger = "0.10.0"
tokio = { workspace = true }
