[package]
name = "rust"
version = "1.0.1"
authors = ["Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

[features]
ci = []
regchest = []

[dev-dependencies]
zingomobile_utils = { path = "../zingomobile_utils" }
regchest_utils = { git="https://github.com/zingolabs/zingo-regchest", default-features=true, branch = "dev" }
darkside-tests = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "dev" }
json = "0.12.4"
env_logger = "0.10.0"
tokio = { workspace = true }
