[package]
name = "rustios"
version = "1.0.0"
authors = ["Aditya Kulkarni <aditya@zecwallet.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rustlib = { path = "../lib" }

[lib]
name = "rustios"
crate-type = ["staticlib"]