[package]
name = "rustios"
version = "1.0.1"
authors = ["Zingolabs <zingo@zingolabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
rustlib = { path = "../lib" }

[lib]
name = "rustios"
crate-type = ["staticlib"]