[package]
name = "rustlib"
version = "1.0.1"
authors = ["Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

[dependencies]
zingolib = { workspace = true }
zingoconfig = { workspace = true }
http = "0.2.4"
lazy_static = "1.4.0"
base64 = "0.11.0"
android_logger = "0.11"
log = "0.4.8"
uniffi = { workspace = true, features = ["cli"] }

[build-dependencies]
uniffi_build = { version = "0.27.0", features = [ "builtin-bindgen" ] }

[dev-dependencies]
tokio =  { version = "1.24.2", features = ["full"] }
zingo-testutils = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
darkside-tests = { git="https://github.com/zingolabs/zingolib", default-features=true, branch = "stable" }
json = "0.12.4"
env_logger = "0.10.0"
zingomobile_utils = { path = "../zingomobile_utils" }
regchest_utils = { git="https://github.com/zingolabs/zingo-regchest", default-features=true, branch = "dev" }

[lib]
# `rlib` for ios.
crate-type = ["cdylib", "rlib"]
name = "rustlib"

[[bin]]
# This can be whatever name makes sense for your project, 
# but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"