[package]
name = "zingo"
version = "1.0.1"
authors = ["Zingolabs <zingo@zingolabs.com>"]
edition = "2021"

[dependencies]
zingolib = { workspace = true }
http = "0.2.4"
lazy_static = "1.4.0"
base64 = "0.22"
android_logger = "0.11"
log = "0.4"
uniffi = { workspace = true, features = [ "cli" ] }
tokio = { workspace = true }

[build-dependencies]
uniffi_build = { version = "0.27", features = [ "builtin-bindgen" ] }

[lib]
crate-type = ["cdylib", "staticlib"]
name = "zingo"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"